manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: to-do-app-dep
spec:
  replicas: 1
  selector:
    matchLabels:
      app: to-do-app
  template:
    metadata:
      labels:
        app: to-do-app
    spec:
      volumes:
        - name: shared-folder
          persistentVolumeClaim:
            claimName: cluster-share
      containers:
        - name: to-do-app
          image: isalxmkh/to-do-app:v0.7
          volumeMounts:
          - name: shared-folder
            mountPath: /usr/src/app/files/
