manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: to-do-app-svc
spec:
  type: ClusterIP
  selector:
    app: to-do-app
  ports:
    - port: 2345
      protocol: TCP
      targetPort: 3001
      name: front-tcp
