manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: to-do-app-ing
spec:
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: to-do-app-svc
            port:
              number: 2345
  - http:
      paths:
      - path: /download-image
        pathType: Prefix
        backend:
          service:
            name: to-do-app-svc
            port:
              number: 2345
  - http:
      paths:
      - path: /get-image
        pathType: Prefix
        backend:
          service:
            name: to-do-app-svc
            port:
              number: 2345
